# wordlist-app

./: .gitignore  CMakeLists.txt  README.md  solution.txt
.cache/clangd/index/: core.cpp.DD07F471C94A442B.idx  core.h.7994B8C60B34BE52.idx  edge.h.208F30272C8F7D76.idx  graph.cpp.9C2AE75D3D95543A.idx  graph.h.D2DC5D44B1BB53B1.idx  main.cpp.5C6537A4CEE66385.idx  node.cpp.61522887D1ECA535.idx  node.h.0002FAE7892DDB9C.idx  scc.cpp.8AAEAEC40E00D401.idx  scc.h.79ECB8A191944005.idx  utils.h.C596CE0E129E4FF4.idx
GUI/: CMakeLists.txt  gui.cpp  gui.ui  main.cpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core.cpp  graph.cpp  node.cpp  scc.cpp
src/include/: core.h  edge.h  graph.h  node.h  scc.h  utils.h
test/: Makefile  WordList.cpp  test.cpp
test/core/: core.cpp  graph.cpp  node.cpp  scc.cpp
test/include/: edge.h  graph.h  node.h  scc.h  utils.h
